# intel_8086_emulator_computer_computerenhance

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
LUT/: LUT.h
asm_files/: listing_0041_add_sub_cmp_jnz.asm
handlers/: InstructionSimulatorHandler.cpp  InstructionSimulatorHandler.h  InstructionsHandlers.cpp  InstructionsHandlers.h
